quectel: add udev rules unit tester
(cherry picked from commit 55ae47a3bb874991ca621e4aa17cf16b08d28139)

--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -1155,8 +1155,6 @@ endif
 
 if ENABLE_PLUGIN_QUECTEL
 
-dist_udevrules_DATA += quectel/77-mm-quectel-port-types.rules
-
 pkglib_LTLIBRARIES += libmm-plugin-quectel.la
 libmm_plugin_quectel_la_SOURCES = \
 	quectel/mm-plugin-quectel.c \
@@ -1177,6 +1175,9 @@ libmm_plugin_quectel_la_CPPFLAGS = \
 	-DMM_MODULE_NAME=\"quectel\" \
 	$(NULL)
 libmm_plugin_quectel_la_LDFLAGS = $(PLUGIN_COMMON_LINKER_FLAGS)
+
+dist_udevrules_DATA += quectel/77-mm-quectel-port-types.rules
+AM_CFLAGS += -DTESTUDEVRULESDIR_QUECTEL=\"${srcdir}/quectel\"
 
 endif
 
