ci: create release tarball and hash as build artifacts

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -146,3 +146,10 @@ build-default:
     - make check
     - make install
     - make distcheck
+    - sha256sum $CI_PROJECT_NAME-*.tar.xz | awk '{print $1;}' > pkg_hash.txt
+  artifacts:
+    name: "$CI_PROJECT_NAME-$CI_COMMIT_SHORT_SHA"
+    paths:
+      - /builds/$CI_PROJECT_ROOT_NAMESPACE/$CI_PROJECT_NAME/$CI_PROJECT_NAME-*.tar.xz
+      - /builds/$CI_PROJECT_ROOT_NAMESPACE/$CI_PROJECT_NAME/pkg_hash.txt
+    expire_in: 2 days
