tools: add new system daemon stub tester application
This script mock some of ModemManager DBus interfaces (main object, Modem, Sim),
it also adds a test interface "org.freedesktop.ModemManager1.LibmmGlibTest"
which allow to inject some errors and simulate behavior:
  - Add a modem object
  - Emit modem state changed
  - Set modem error

This script also add the possibility to log in a file for debugging purpose.
Because the stdout/stderr are not shown when the program is spawned by DBus
auto activation.

Note: Script is heavily inspired from test-networkmanager-service.py from
NetworkManager project

Signed-off-by: Frederic Martinsons <frederic.martinsons@sigfox.com>

--- a/configure.ac
+++ b/configure.ac
@@ -539,6 +539,7 @@ src/Makefile
 src/tests/Makefile
 plugins/Makefile
 test/Makefile
+tools/Makefile
 introspection/Makefile
 introspection/tests/Makefile
 po/Makefile.in
