tools: add unit test for test-modemmanager-service.py
The tests spawn the service via GTestDBus framework and make
some test API call while checking libmm interface to verify
that informations are well propagated.

To be able to use the fresh built libmm typelib, I used a
wrapper script to set GI_TYPELIB_PATH (because DBus activation
process clean the environment so it is not possible to set
it directly in the file).

This requires also the install of libgirepository-dev and python3-gi
in the CI docker.

Signed-off-by: Frederic Martinsons <frederic.martinsons@sigfox.com>

--- a/.gitignore
+++ b/.gitignore
@@ -175,5 +175,9 @@ Makefile.in
 /test/mmsmspdu
 /test/mmsmsmonitor
 
+/tools/tests/services/org.freedesktop.ModemManager1.service
+/tools/tests/test-stub
+/tools/tests/test-wrapper.sh
+
 /ModemManager-*-coverage.info
 /ModemManager-*-coverage/
