--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -33,6 +33,11 @@ AM_LDFLAGS = \
 	$(GUDEV_LIBS) \
 	$(NULL)
 
+if WITH_QRTR
+AM_CFLAGS  += $(QRTR_CFLAGS)
+AM_LDFLAGS += $(QRTR_LIBS)
+endif
+
 if WITH_QMI
 AM_CFLAGS  += $(QMI_CFLAGS)
 AM_LDFLAGS += $(QMI_LIBS)
