kernel-device: new helper to load lower device link names
Based exclusively on sysfs for now. We could do this via netlink if
needed as well.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -149,6 +149,8 @@ libkerneldevice_la_CPPFLAGS = \
 libkerneldevice_la_SOURCES = \
 	kerneldevice/mm-kernel-device.h \
 	kerneldevice/mm-kernel-device.c \
+	kerneldevice/mm-kernel-device-helpers.h \
+	kerneldevice/mm-kernel-device-helpers.c \
 	kerneldevice/mm-kernel-device-generic.h \
 	kerneldevice/mm-kernel-device-generic.c \
 	kerneldevice/mm-kernel-device-generic-rules.h \
