port-net: new 'MMPortNet' object with netlink capabilities
Right now just with the support to setup link properties like up/down
state or the link mtu.

This features are required when using QMAP based multiplexing with the
qmi_wwan kernel driver.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -199,6 +199,8 @@ mm-port-enums-types.c: Makefile.am $(top_srcdir)/build-aux/mm-enums-template.c m
 libport_la_SOURCES = \
 	mm-port.c \
 	mm-port.h \
+	mm-port-net.c \
+	mm-port-net.h \
 	mm-port-serial.c \
 	mm-port-serial.h \
 	mm-port-serial-at.c \
@@ -209,6 +211,8 @@ libport_la_SOURCES = \
 	mm-port-serial-gps.h \
 	mm-serial-parsers.c \
 	mm-serial-parsers.h \
+	mm-netlink.h \
+	mm-netlink.c \
 	$(NULL)
 
 nodist_libport_la_SOURCES = $(PORT_ENUMS_GENERATED)
