--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,7 +52,38 @@ build-no-qmi:
     - make check
     - make install
 
-build-no-mbim:
+build-qmi-qrtr-no-mbim:
+  stage: build
+  extends:
+  - .fdo.distribution-image@debian
+  - .common_variables
+  only:
+    - master
+    - merge_requests
+    - tags
+    - schedules
+  script:
+    - git clone --depth 1 https://gitlab.freedesktop.org/mobile-broadband/libqrtr-glib.git
+    - pushd libqrtr-glib
+    - NOCONFIGURE=1 ./autogen.sh
+    - ./configure --prefix=/usr
+    - make
+    - make install
+    - popd
+    - git clone --depth 1 https://gitlab.freedesktop.org/mobile-broadband/libqmi.git
+    - pushd libqmi
+    - NOCONFIGURE=1 ./autogen.sh
+    - ./configure --prefix=/usr --disable-mbim-qmux --enable-qrtr --enable-collection=basic
+    - make
+    - make install
+    - popd
+    - NOCONFIGURE=1 ./autogen.sh
+    - ./configure --prefix=/tmp/build-qmi-qrtr-no-mbim --disable-gtk-doc --without-mbim
+    - make
+    - make check
+    - make install
+
+build-qmi-no-qrtr-no-mbim:
   stage: build
   extends:
   - .fdo.distribution-image@debian
@@ -66,12 +97,12 @@ build-no-mbim:
     - git clone --depth 1 https://gitlab.freedesktop.org/mobile-broadband/libqmi.git
     - pushd libqmi
     - NOCONFIGURE=1 ./autogen.sh
-    - ./configure --prefix=/usr --disable-mbim-qmux --enable-collection=basic
+    - ./configure --prefix=/usr --disable-mbim-qmux --disable-qrtr --enable-collection=basic
     - make
     - make install
     - popd
     - NOCONFIGURE=1 ./autogen.sh
-    - ./configure --prefix=/tmp/build-no-mbim --disable-gtk-doc --without-mbim
+    - ./configure --prefix=/tmp/build-qmi-no-qrtr-no-mbim --disable-gtk-doc --without-mbim
     - make
     - make check
     - make install
@@ -132,10 +163,17 @@ build-single-plugins:
     - make
     - make install
     - popd
+    - git clone --depth 1 https://gitlab.freedesktop.org/mobile-broadband/libqrtr-glib.git
+    - pushd libqrtr-glib
+    - NOCONFIGURE=1 ./autogen.sh
+    - ./configure --prefix=/usr
+    - make
+    - make install
+    - popd
     - git clone --depth 1 https://gitlab.freedesktop.org/mobile-broadband/libqmi.git
     - pushd libqmi
     - NOCONFIGURE=1 ./autogen.sh
-    - ./configure --prefix=/usr --enable-mbim-qmux --enable-collection=basic
+    - ./configure --prefix=/usr --enable-mbim-qmux --enable-qrtr --enable-collection=basic
     - make
     - make install
     - popd
@@ -171,10 +209,17 @@ build-default:
     - make
     - make install
     - popd
+    - git clone --depth 1 https://gitlab.freedesktop.org/mobile-broadband/libqrtr-glib.git
+    - pushd libqrtr-glib
+    - NOCONFIGURE=1 ./autogen.sh
+    - ./configure --prefix=/usr
+    - make
+    - make install
+    - popd
     - git clone --depth 1 https://gitlab.freedesktop.org/mobile-broadband/libqmi.git
     - pushd libqmi
     - NOCONFIGURE=1 ./autogen.sh
-    - ./configure --prefix=/usr --enable-mbim-qmux --enable-collection=basic
+    - ./configure --prefix=/usr --enable-mbim-qmux --enable-qrtr --enable-collection=basic
     - make
     - make install
     - popd
