build: add support for the new SAR interface
Include the new SAR interface in the build so that gdbus-codegen
generates support for it in libmm-glib as well as proper documentation
in the API reference.

--- a/introspection/Makefile.am
+++ b/introspection/Makefile.am
@@ -21,6 +21,7 @@ xml_DATA = \
 	org.freedesktop.ModemManager1.Modem.Time.xml \
 	org.freedesktop.ModemManager1.Modem.Voice.xml \
 	org.freedesktop.ModemManager1.Call.xml \
+	org.freedesktop.ModemManager1.Modem.Sar.xml \
 	$(NULL)
 
 EXTRA_DIST = \
