iface-modem-3gpp-profile-manager: new interface for profile management
This interface will provide support for the profile management
operations in different modem types.

This initial commit introduces support for the interface and provides
handlers for the methods that may be called in the interface.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -346,6 +346,8 @@ ModemManager_SOURCES = \
 	mm-iface-modem.c \
 	mm-iface-modem-3gpp.h \
 	mm-iface-modem-3gpp.c \
+	mm-iface-modem-3gpp-profile-manager.h \
+	mm-iface-modem-3gpp-profile-manager.c \
 	mm-iface-modem-3gpp-ussd.h \
 	mm-iface-modem-3gpp-ussd.c \
 	mm-iface-modem-cdma.h \
