api,modem: new Modem3gpp.ProfileManager interface
This new interface allows modems to expose the list of available
connection profiles stored in the device and edit or delete them; as
long as the underlying device/protocol allows it.

--- a/cli/Makefile.am
+++ b/cli/Makefile.am
@@ -19,6 +19,7 @@ mmcli_SOURCES = \
 	mmcli-manager.c \
 	mmcli-modem.c \
 	mmcli-modem-3gpp.c \
+	mmcli-modem-3gpp-profile-manager.c \
 	mmcli-modem-3gpp-ussd.c \
 	mmcli-modem-cdma.c \
 	mmcli-modem-simple.c \
