--- a/introspection/Makefile.am
+++ b/introspection/Makefile.am
@@ -22,6 +22,7 @@ xml_DATA = \
 	org.freedesktop.ModemManager1.Modem.Voice.xml \
 	org.freedesktop.ModemManager1.Call.xml \
 	org.freedesktop.ModemManager1.Modem.Sar.xml \
+	org.freedesktop.ModemManager1.Modem.Modem3gpp.ProfileManager.xml \
 	$(NULL)
 
 EXTRA_DIST = \
